--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  html { scroll-behavior: smooth; }
+  body { @apply font-body text-text bg-bg; }
+  h2 { @apply text-center text-2xl mb-6 text-primary font-semibold; }
+}
