migrated the what clients say section to tailwind

--- a/css/tw.css
+++ b/css/tw.css
@@ -590,12 +590,29 @@ h2 {
   }
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .block {
@@ -616,6 +633,10 @@ h2 {
 
 .w-full {
   width: 100%;
+}
+
+.max-w-xl {
+  max-width: 36rem;
 }
 
 .grid-cols-1 {
@@ -662,6 +683,11 @@ h2 {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-bg-alt {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 248 240 / var(--tw-bg-opacity, 1));
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -694,6 +720,10 @@ h2 {
   text-align: center;
 }
 
+.align-top {
+  vertical-align: top;
+}
+
 .text-hero-xl {
   font-size: 3rem;
   line-height: 1.1;
@@ -713,6 +743,14 @@ h2 {
   font-weight: 600;
 }
 
+.italic {
+  font-style: italic;
+}
+
+.not-italic {
+  font-style: normal;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
@@ -721,6 +759,11 @@ h2 {
 .text-primary {
   --tw-text-opacity: 1;
   color: rgb(107 79 59 / var(--tw-text-opacity, 1));
+}
+
+.text-muted {
+  --tw-text-opacity: 1;
+  color: rgb(102 102 102 / var(--tw-text-opacity, 1));
 }
 
 .shadow-sm {
